# GuideToJobPostings

./: .gitignore  AGENTS.md  OFFICIAL_ASSET_SOURCE.md  README.md  README_FIRST_KO.md
01_WEB_FIREBASE/: .firebaserc  .gitignore  FIREBASE_DEPLOY_GUIDE.md  firebase.json  firestore.rules  package.json
01_WEB_FIREBASE/app/: admin-fix.js  admin-guard.js  admin.html  admin.js  answer-service.js  firestore-store.js  header-account.js  index.html  list.js  login.html  login.js  main.js  manage.html  members.html  notice.html  profile.html  profile.js  publish.html  school-notices.mock.json  student-profile.js  styles.css
01_WEB_FIREBASE/functions/: package-lock.json  package.json
01_WEB_FIREBASE/scripts/: generate-admin-config.mjs  generate-firebase-config.mjs  local-codex-answer-server.mjs
01_WEB_FIREBASE/tests/: ai-answer-pipeline.test.mjs  firestore-spark-guard.test.mjs  notice-sort.test.mjs  security-regression.test.mjs  student-profile.test.mjs
01_WEB_FIREBASE/worker/: package-lock.json  package.json  schema.sql  wrangler.jsonc
02_TAURI_DEVELOPMENT_SOURCE/: .gitignore  BUILD_WINDOWS_MAC_KO.md  README.md  package-lock.json  package.json
02_TAURI_DEVELOPMENT_SOURCE/app/: account-access.js  admin-guard.js  admin.html  admin.js  answer-service.js  (+17 more)
02_TAURI_DEVELOPMENT_SOURCE/src-tauri/: Cargo.toml  tauri.conf.json
02_TAURI_DEVELOPMENT_SOURCE/src-tauri/capabilities/: default.json
02_TAURI_DEVELOPMENT_SOURCE/src-tauri/icons/: icon.icns
02_TAURI_DEVELOPMENT_SOURCE/src-tauri/src/: lib.rs  main.rs
docs/: 01-folder-architecture.md  02-specs.md  03-product-plan.md
(+20 files in other folders)
